src/main/java/org/example/firsttry/error/ErrorDto.java
package org.example.firsttry.error;

import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;

@Data
@AllArgsConstructor
@NoArgsConstructor
public class ErrorDto {
    private int code;
    private String description;
}
